Implement BLAS testers. Fix several bugs.

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,14 +3,18 @@ pwd = $(shell pwd)
 CXX      = g++
 LDFLAGS  = -fPIC -fopenmp
 CXXFLAGS = -fPIC -fopenmp -MMD -Wall -pedantic -std=c++11
-CPPFLAGS = -I../../libtest -I../include -I/opt/intel/mkl/include
+CPPFLAGS = -I../../libtest -I../include -I/opt/intel/mkl/include \
+           -I${CBLASDIR} \
            -DFORTRAN_LOWER \
+           -DHAVE_MACOS_ACCELERATE \
+           -DBLAS_COMPLEX_RETURN_ARGUMENT \
            -DMKL_Complex8="std::complex<float>" \
            -DMKL_Complex16="std::complex<double>"
 LIBS     = -L../../libtest -Wl,-rpath,${pwd}/../../libtest -ltest \
            -framework Accelerate
 
 CXXFLAGS += -Wno-unused-local-typedefs -Wno-unused-but-set-variable
+CXXFLAGS += -Werror
 #CXXFLAGS += -Wconversion
 
 src := $(wildcard *.cc)
