Updated CMake script, moved tester to it's own script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,104 +195,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/blasppConfig.cmake.in
 
 if (BLASPP_BUILD_TESTS)
     message(STATUS "Blaspp tests will be built.")
-    #add_subdirectory(test)
-    add_executable(blaspp_test
-        test/test.cc
-        test/test_asum.cc
-        test/test_axpy.cc
-        test/test_batch_gemm.cc
-        test/test_batch_hemm.cc
-        test/test_batch_her2k.cc
-        test/test_batch_herk.cc
-        test/test_batch_symm.cc
-        test/test_batch_syr2k.cc
-        test/test_batch_syrk.cc
-        test/test_batch_trmm.cc
-        test/test_batch_trsm.cc
-        test/test_copy.cc
-        test/test_dot.cc
-        test/test_dotu.cc
-        test/test_error.cc
-        test/test_gemm.cc
-        test/test_gemv.cc
-        test/test_ger.cc
-        test/test_geru.cc
-        test/test_hemm.cc
-        test/test_hemv.cc
-        test/test_her.cc
-        test/test_her2.cc
-        test/test_her2k.cc
-        test/test_herk.cc
-        test/test_iamax.cc
-        test/test_max.cc
-        test/test_nrm2.cc
-        test/test_rot.cc
-        test/test_rotg.cc
-        test/test_rotm.cc
-        test/test_rotmg.cc
-        test/test_scal.cc
-        test/test_swap.cc
-        test/test_symm.cc
-        test/test_symv.cc
-        test/test_syr.cc
-        test/test_syr2.cc
-        test/test_syr2k.cc
-        test/test_syrk.cc
-        test/test_trmm.cc
-        test/test_trmv.cc
-        test/test_trsm.cc
-        test/test_trsv.cc
-    )
-
-    if(CUDA_FOUND)
-        message(STATUS "Building accelerated CUDA wrappers.")
-        target_sources(blaspp_test PRIVATE
-            test/test_batch_gemm_device.cc
-            test/test_batch_hemm_device.cc
-            test/test_batch_her2k_device.cc
-            test/test_batch_herk_device.cc
-            test/test_batch_symm_device.cc
-            test/test_batch_syr2k_device.cc
-            test/test_batch_syrk_device.cc
-            test/test_batch_trmm_device.cc
-            test/test_batch_trsm_device.cc
-            test/test_gemm_device.cc
-            test/test_hemm_device.cc
-            test/test_her2k_device.cc
-            test/test_herk_device.cc
-            test/test_symm_device.cc
-            test/test_syr2k_device.cc
-            test/test_syrk_device.cc
-            test/test_trmm_device.cc
-            test/test_trsm_device.cc
-        )
-    endif()
-
-    # Set -Dlibtest_DIR=/path/to/libtest
-    find_package(libtest)
-
-    target_link_libraries(blaspp_test
-        libtest
-        blaspp
-    )
-
-    target_include_directories(blaspp_test
-        PUBLIC
-            ${CMAKE_CURRENT_SOURCE_DIR}/test
-            ${CMAKE_CURRENT_SOURCE_DIR}/include
-            #${Libtest_INCLUDE_DIR}
-    )
-if(0)
-    target_compile_definitions(blaspp_test PUBLIC
-        ${FORTRAN_MANGLING_DEFINES}
-        ${BLAS_DEFINES}
-        ${BLAS_RETURN}
-        ${MKL_DEFINES}
-        ${CBLAS_DEFINES}
-        ${LAPACK_DEFINES}
-        ${BLAS_int}
-    )
-endif()
+    add_subdirectory(test)
 endif ()
 
 
