Updated CMake scripts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
 # CMake script for BLAS++ library
 # repo: http://bitbucket.org/icl/blaspp
-# Requires Libtest testing library from http://bitbucket.org/icl/libtest
+# Tests require Libtest testing library from http://bitbucket.org/icl/libtest
+
+# Options:
+#  -DCMAKE_INSTALL_PREFIX=<some_dir>
+#    Change installation directory, default: /opt/slate/
+#  -Dlibtest_DIR=path/to/libtest
+#    Point to testing framework used in tests
+#  -DBLASPP_BUILD_TESTS=ON
+#    Build BLASPP test suite
+#  -DBLAS_LIBRARIES=<blas_libraries>
+#    Supply specific BLAS implementation, if not usable, CMake will error
 
 cmake_minimum_required(VERSION 3.2)
 
@@ -8,7 +18,30 @@ project(BLASPP
     LANGUAGES CXX
 )
 
-option(BLASPP_BUILD_TESTS "Build BLAS++ testers, ON by default" ON)
+option(BLASPP_BUILD_TESTS "Build BLAS++ testers, ON by default" OFF)
+
+# BLAS options
+# todo: Goto, BLIS, FLAME, others?
+set(BLAS_LIBRARY "auto" CACHE STRING
+    "Choose BLAS & LAPACK library: AMD, Apple, Cray, IBM, Intel, OpenBLAS" )
+set_property(CACHE BLAS_LIBRARY PROPERTY STRINGS
+    "auto" "AMD ACML" "Apple Accelerate" "Cray LibSci" "IBM ESSL"
+    "Intel MKL" "OpenBLAS" )
+
+set(BLAS_LIBRARY_MKL "auto" CACHE STRING
+    "For Intel MKL: use Intel ifort or GNU gfortran conventions?" )
+set_property(CACHE BLAS_LIBRARY_MKL PROPERTY STRINGS
+    "auto" "GNU gfortran conventions" "Intel ifort conventions" )
+
+set(BLAS_LIBRARY_INTEGER "auto" CACHE STRING
+    "BLAS integer size: int (LP64) or int64_t (ILP64)" )
+set_property(CACHE BLAS_LIBRARY_INTEGER PROPERTY STRINGS
+    "auto" "int (LP64)" "int64_t (ILP64)" )
+
+set(BLAS_LIBRARY_THREADING "auto" CACHE STRING
+    "BLAS threaded or sequential" )
+set_property(CACHE BLAS_LIBRARY_THREADING PROPERTY STRINGS
+    "auto" "threaded" "sequential" )
 
 # Enforce out of source builds
 string (TOLOWER "${CMAKE_CURRENT_SOURCE_DIR}" SOURCE_DIR_LOWER)
@@ -108,14 +141,58 @@ if(CUDA_FOUND)
     )
 endif()
 
-# Finds BLAS library, only MKL for now, and configures
-include ("${CMAKE_CURRENT_SOURCE_DIR}/config/BLASConfig.cmake")
-include ("${CMAKE_CURRENT_SOURCE_DIR}/config/CBLASConfig.cmake")
-include ("${CMAKE_CURRENT_SOURCE_DIR}/config/LAPACKConfig.cmake")
+# Check user supplied BLAS libraries
+if(BLAS_LIBRARIES)
+    message("BLAS_LIBRARIES supplied by user: " ${BLAS_LIBRARIES})
+    include(CheckFortranFunctionExists)
+    set(CMAKE_REQUIRED_LIBRARIES ${BLAS_LIBRARIES})
+    CHECK_FORTRAN_FUNCTION_EXISTS("dgemm" BLAS_FOUND)
+    unset(CMAKE_REQUIRED_LIBRARIES)
+    if(BLAS_FOUND)
+        message(STATUS "--> BLAS supplied by user is WORKING, will use ${BLAS_LIBRARIES}.")
+        target_link_libraries(blaspp ${BLAS_LIBRARIES})
+    else()
+        message(ERROR "--> BLAS supplied by user is not WORKING, CANNOT USE ${BLAS_LIBRARIES}.")
+        message(ERROR "-->     Will use REFERENCE BLAS (by default)")
+        message(ERROR "-->     Or Correct your BLAS_LIBRARIES entry ")
+        message(ERROR "-->     Or Consider checking USE_OPTIMIZED_BLAS")
+    endif()
+# Search for system installed BLAS
+elseif(USE_OPTIMIZED_BLAS)
+    find_package(BLAS)
+    if(BLAS_FOUND)
+        message("BLAS_FOUND by CMake: " ${BLAS_LIBRARIES})
+        target_link_libraries(blaspp ${BLAS_LIBRARIES})
+    endif()
+else()
+    message("BLAS_LIBRARIES not found, using custom search...")
+
+    # Custom BLAS library locator, if all else fails
+    include ("cmake/BLASFinder.cmake")
+endif()
+
+# Configure BLAS Libraries, determine return types and suck
+include ("cmake/BLASConfig.cmake")
+if(blas_config_found STREQUAL "TRUE")
+    # set blas_config so it the config script isn't run each time
+    set (blas_config_found "TRUE" CACHE STRING "Set TRUE if BLAS config is found")
+endif()
+
+# Check for CBLAS
+if(NOT CBLAS_DEFINES STREQUAL "")
+    include ("cmake/CBLASConfig.cmake")
+endif()
+
+# Check for LAPACK
+if(NOT LAPACK_DEFINES STREQUAL "")
+    include ("cmake/LAPACKConfig.cmake")
+endif()
 
 # Some debug
 if(BLASPP_QUIET)
     message("BLAS DEFINES: " ${BLAS_DEFINES})
+    message("BLAS links: " ${BLAS_links})
+    message("BLAS LIBRARIES: " ${BLAS_LIBRARIES})
     message("BLAS_cxx_flags: " ${BLAS_cxx_flags})
     message("BLAS INTS defines: " ${BLAS_INT_DEFINES})
     message("FORTRAN MANGLING defines: " ${FORTRAN_MANGLING_DEFINES})
@@ -128,14 +205,10 @@ if(NOT ${BLAS_DEFINES} MATCHES "HAVE_BLAS")
     message(FATAL_ERROR "BLAS not found, cannot configure BLAS++")
 endif()
 
-if(HAVE_MKL)
-    message(STATUS "Using MKL as backend.")
-endif(HAVE_MKL)
-
 target_link_libraries(blaspp PUBLIC
     #LDFLAGS example = -fopenmp
     #LIBS example    = -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -lpthread -lm
-    ${BLAS_links}
+    ${BLAS_LIBRARIES}
     ${BLAS_cxx_flags}
 )
 
@@ -150,7 +223,7 @@ target_compile_definitions(blaspp PUBLIC
     ${FORTRAN_MANGLING_DEFINES}
     ${BLAS_DEFINES}
     ${BLAS_RETURN}
-    ${MKL_DEFINES}
+    ${LIB_DEFINES}
     ${CBLAS_DEFINES}
     ${LAPACK_DEFINES}
     ${BLAS_int}
@@ -196,6 +269,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/blasppConfig.cmake.in
 if (BLASPP_BUILD_TESTS)
     message(STATUS "Blaspp tests will be built.")
     add_subdirectory(test)
+    enable_testing()
 endif ()
 
-
+# To make this more user friendly, add 'make lib' option.
+add_custom_target(lib DEPENDS blaspp)
