pass BLAS_FLOAT_RETURN to compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,7 +275,8 @@ target_compile_definitions(blaspp PUBLIC
     # example: -fopenmp -DFORTRAN_ADD_ -DADD_ -DHAVE_BLAS -DBLAS_COMPLEX_RETURN_ARGUMENT -DHAVE_MKL -DHAVE_CBLAS -DHAVE_LAPACK
     ${FORTRAN_MANGLING_DEFINES}
     ${BLAS_DEFINES}
-    ${BLAS_RETURN}
+    ${BLAS_COMPLEX_RETURN}
+    ${BLAS_FLOAT_RETURN}
     ${LIB_DEFINES}
     ${CBLAS_DEFINES}
     ${LAPACK_DEFINES}
